infra/.tekton/triggers/el-vibetribe-listener.yaml
apiVersion: v1
kind: Service
metadata:
  name: el-vibetribe-listener
  namespace: tekton-pipelines
spec:
  type: NodePort
  selector:
    eventlistener: vibetribe-listener-v2
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080
