infra/.tekton/triggers/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-el-ingress
  namespace: tekton-pipelines
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: tekton.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: el-vibetribe-listener
                port:
                  number: 8080
